--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,16 @@
 image: python:3.6
-test:
+
+stages:
+  - test
+  - build
+
+tests:
+  stage: test
   script: python3 -m unittest discover pycyqle/test
+
+build:
+  stage: build
+  script: python3 setup.py sdist
+  artifacts:
+    paths:
+    - dist/
