Fixes call to unittest in gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 
 tests:
   stage: test
-  script: python3 -m unittest discover pycyqle/test
+  script: python3 -m unittest discover -t .
 
 build:
   stage: build
